test/bad/modified.spkt.expected
Error on line 4:
  Attempt to modify constant con
Error on line 6:
  Attempt to modify constant v
